# Prism

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
crates/prism_aot/: Cargo.toml
crates/prism_aot/src/: bundle.rs  error.rs  imports.rs  native.rs  planner.rs
crates/prism_cli/: Cargo.toml
crates/prism_cli/src/: config.rs  cpython_harness.rs  diagnostics.rs  pipeline.rs  prism_test.rs  prismc.rs  repl.rs
crates/prism_code/: Cargo.toml
crates/prism_code/src/: code_object.rs  lib.rs
crates/prism_compiler/: Cargo.toml
crates/prism_compiler/src/: compiler.rs  exception_compiler.rs  function_compiler.rs  lib.rs  name_mangling.rs
crates/prism_compiler/tests/: starred_subscript.rs  try_finally.rs  try_star.rs
crates/prism_core/: Cargo.toml
crates/prism_core/src/: error.rs  lib.rs  python_unicode.rs  speculation.rs  value.rs
crates/prism_jit/: Cargo.toml
crates/prism_jit/src/: lib.rs
crates/prism_jit/tests/: tier1_abi.rs
crates/prism_runtime/: Cargo.toml
crates/prism_runtime/src/: gc_trace.rs  lib.rs  object_tracer.rs
crates/prism_stdlib/: Cargo.toml  build.rs  modules.toml
crates/prism_stdlib/python/: _py_abc.py  abc.py  py_compile.py  subprocess.py  tempfile.py  unittest.py  warnings.py  zipfile.py
crates/prism_stdlib/src/: lib.rs
prism_aot/: Cargo.toml
prism_aot/src/: bundle.rs  error.rs  imports.rs  lib.rs  link.rs  manifest.rs  native.rs  planner.rs  runtime.rs
prism_aot/src/bundle/: tests.rs
prism_aot/src/imports/: tests.rs
prism_aot/src/link/: tests.rs
prism_aot/src/native/: tests.rs
prism_aot/src/planner/: tests.rs
prism_aot/src/runtime/: tests.rs
prism_cli/: Cargo.toml
prism_cli/src/: args.rs  config.rs  cpython_harness.rs  cpython_tests.rs  diagnostics.rs  error.rs  lib.rs  main.rs  pipeline.rs  prism_test.rs  prismc.rs  repl.rs
prism_cli/src/args/: tests.rs
prism_cli/src/config/: tests.rs
prism_cli/src/diagnostics/: tests.rs
prism_cli/src/error/: tests.rs
prism_cli/src/pipeline/: tests.rs
prism_cli/src/prismc/: tests.rs
prism_cli/src/repl/: tests.rs
prism_cli/tests/: command_mode.rs  cpython_bool_keyword.rs  cpython_future_stmt.rs  yield_from_mode.rs
prism_gc/: Cargo.toml
prism_gc/src/: alloc.rs  config.rs  gc_array.rs  lib.rs  stats.rs  tlab.rs
prism_gc/src/alloc/: tests.rs
prism_gc/src/barrier/: card_table.rs  mod.rs  remembered_set.rs  satb_tests.rs  tests.rs
prism_gc/src/collector/: concurrent_major.rs  concurrent_major_tests.rs  concurrent_marker_tests.rs  integration_tests.rs  major.rs  mark_bitmap_tests.rs  minor.rs  mod.rs  tests.rs
prism_gc/src/config/: tests.rs
prism_gc/src/gc_array/: tests.rs
prism_gc/src/heap/: block.rs  large_object_space.rs  mod.rs  nursery.rs  old_space.rs  tests.rs
prism_gc/src/roots/: handles.rs  mod.rs  tests.rs
prism_gc/src/stats/: tests.rs
prism_gc/src/tlab/: tests.rs
prism_gc/src/trace/: mod.rs  object_tracer.rs  tests.rs  tracer.rs
prism_jit/: Cargo.toml
prism_jit/src/: lib.rs
prism_jit/src/backend/: mod.rs
prism_jit/src/codegen/: dispatch_patcher.rs  osr_patcher.rs  patcher.rs
prism_jit/src/gc/: alloc_stub.rs  jit_roots.rs  mod.rs  stackmap.rs  write_barrier.rs
prism_jit/src/ic/: call_ic.rs  hooks.rs  ic_runtime.rs  integration_tests.rs  invalidation.rs  jit_listener.rs  mega_ic.rs  mod.rs  poly_ic.rs  property_ic.rs  tests.rs
prism_jit/src/ir/: arena.rs  builder.rs  cfg.rs  graph.rs  mod.rs  node.rs  operators.rs  types.rs
prism_jit/src/opt/: branch_probability.rs  copy_prop.rs  dce.rs  escape.rs  gvn.rs  hot_cold.rs  licm.rs  loop_analyzer.rs  mod.rs  pipeline.rs  simplify.rs  speculation.rs  tests.rs
prism_jit/src/regalloc/: constraint.rs  graph_coloring.rs  interference.rs  interval.rs  linear_scan.rs  liveness.rs  mod.rs  spill.rs  tests.rs
prism_jit/src/runtime/: code_cache.rs  compiler_thread.rs  entry_stub.rs  mod.rs  profile_collector.rs  tests.rs  type_feedback.rs
prism_jit/src/tier1/: codegen.rs  deopt.rs  deopt_ic.rs  driver.rs  frame.rs  lower.rs  mod.rs
prism_jit/src/tier2/: emit.rs  lower.rs  mod.rs  osr.rs  osr_stub.rs  safepoint_placement.rs  state_points.rs
prism_parser/: Cargo.toml
prism_parser/src/: ast.rs  lib.rs  token.rs
prism_parser/src/ast/: tests.rs
prism_parser/src/lexer/: cursor.rs  identifier.rs  indent.rs  mod.rs  number.rs  string.rs  tests.rs
prism_parser/src/parser/: expr.rs  mod.rs  stmt.rs  tests.rs
prism_parser/src/token/: tests.rs
prism_runtime/: Cargo.toml
prism_runtime/benches/: shapes.rs
prism_runtime/src/: allocation_context.rs  gc_barrier.rs  gc_dispatch.rs  gc_trace.rs  lib.rs  object_tracer.rs  pinned_store.rs
prism_runtime/src/allocation_context/: tests.rs
prism_runtime/src/gc_dispatch/: tests.rs
prism_runtime/src/gc_trace/: tests.rs
prism_runtime/src/object/: call.rs  class.rs  instance.rs  metaclass.rs  mod.rs  mro.rs  pool.rs  registry.rs  shape.rs  shaped_object.rs  super_obj.rs  tests.rs  type_builtins.rs  type_obj.rs  views.rs
prism_runtime/src/object_tracer/: tests.rs
prism_runtime/src/types/: bytes.rs  cell.rs  complex.rs  dict.rs  function.rs  hashable.rs  int.rs  iter.rs  list.rs  memoryview.rs  mod.rs  range.rs  set.rs  slice.rs  string.rs  tuple.rs
prism_runtime/tests/: allocation_policy_tests.rs
prism_vm/: Cargo.toml
prism_vm/benches/: deopt_osr.rs  gc_pauses.rs  jit_speedup.rs  speculation.rs  string_ops.rs
prism_vm/src/: allocation_policy_tests.rs  allocator.rs  aot_abi.rs  builtins.rs  compilation_queue.rs  dispatch.rs  error.rs  exceptions.rs  finalizers.rs  frame.rs  gc_integration.rs  globals.rs  ic_manager.rs  inline_cache.rs  jit_bridge.rs  jit_context.rs  jit_dispatch.rs  jit_executor.rs  lib.rs  osr_trigger.rs  profiler.rs  python_numeric.rs  threading_runtime.rs  tier1_lowering.rs  truthiness.rs  type_feedback.rs  vm.rs
prism_vm/src/allocator/: tests.rs
prism_vm/src/aot_abi/: tests.rs
prism_vm/tests/: allocation_policy_tests.rs  async_integration.rs  attribute_tests.rs  exception_integration.rs  integration.rs  jit_execution.rs  jit_integration.rs  membership_tests.rs  speculation_e2e.rs
(+1228 files in other folders)
