[workspace]
resolver = "2"
members = [
    "prism_aot",
    "prism_code",
    "prism_core",
    "prism_parser",
    "prism_compiler",
    "prism_stdlib",
    "prism_gc",
    "prism_vm",
    "prism_jit",
    "prism_runtime",
    "prism_cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Prism Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/prism-lang/prism"
rust-version = "1.94"

[workspace.dependencies]
# Internal crates
prism_core = { path = "prism_core" }
prism_code = { path = "prism_code" }
prism_gc = { path = "prism_gc" }
prism_parser = { path = "prism_parser" }
prism_compiler = { path = "prism_compiler" }
prism_stdlib = { path = "prism_stdlib" }
prism_vm = { path = "prism_vm" }
prism_jit = { path = "prism_jit" }
prism_runtime = { path = "prism_runtime" }
prism_aot = { path = "prism_aot" }

# External dependencies
thiserror = "2.0"
rustc-hash = "2.1"
bumpalo = "3.16"
bitflags = "2.6"
parking_lot = "0.12"
memmap2 = "0.9"
num-bigint = "0.4"
num-traits = "0.2"
unicode-xid = "0.2"
unicode_names2 = "=1.1.0"
smallvec = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
object = { version = "0.39", default-features = false, features = ["read", "write"] }
arc-swap = "1.7"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
criterion = "0.5"
dashmap = "6.1"
fancy-regex = "0.13"
getrandom = "0.2"
libc = "0.2"
libm = "0.2"
memchr = "2.7"
regex = "1.10"
sha2 = "0.10"
windows-sys = "0.59"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
