[package]
name = "prism_aot"
description = "Whole-program AOT build planning for Prism"
version.workspace = true
edition.workspace = true

[dependencies]
prism_core.workspace = true
prism_code.workspace = true
prism_parser.workspace = true
prism_compiler.workspace = true
prism_vm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
object.workspace = true
