[package]
name = "prism_cli"
description = "Command-line interface for Prism"
version.workspace = true
edition.workspace = true

[[bin]]
name = "prism"
path = "src/main.rs"

[[bin]]
name = "prismc"
path = "src/prismc.rs"

[dependencies]
prism_aot.workspace = true
prism_core.workspace = true
prism_parser.workspace = true
prism_compiler.workspace = true
prism_vm.workspace = true

[dev-dependencies]
object.workspace = true
serde_json.workspace = true
