[package]
name = "prism_gc"
version.workspace = true
edition.workspace = true
description = "High-performance generational garbage collector for Prism Python runtime"
authors.workspace = true
license.workspace = true

[dependencies]
prism_core.workspace = true

# Fast atomic operations
crossbeam-utils = "0.8"

# Work-stealing deque for concurrent marking
crossbeam-deque = "0.8"

# Fast hash maps for object tracking
rustc-hash.workspace = true

# Parking lot for fast mutexes (write barrier synchronization)
parking_lot.workspace = true

# Bit manipulation for card tables
bitflags.workspace = true

[dev-dependencies]
criterion = "0.5"

[features]
# Enable concurrent marking (Phase 2)
concurrent = []
# Enable detailed GC statistics
stats = []
# Enable GC tracing/debugging output
trace = []

