[package]
name = "prism_jit"
description = "JVM/V8-tier JIT compiler for Prism"
version.workspace = true
edition.workspace = true

[dependencies]
prism_core.workspace = true
memmap2.workspace = true
bitflags = "2.6"
prism_compiler.workspace = true
smallvec = "1.13"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory", "Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Kernel"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
