[package]
name = "prism_vm"
description = "High-performance virtual machine for Prism with tiered execution"
version.workspace = true
edition.workspace = true

[dependencies]
prism_core.workspace = true
prism_code.workspace = true
prism_compiler.workspace = true
prism_parser.workspace = true
prism_runtime.workspace = true
prism_stdlib.workspace = true
prism_gc.workspace = true
prism_jit.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
unicode-xid.workspace = true
parking_lot.workspace = true

# High-performance collections
rustc-hash.workspace = true
smallvec.workspace = true
getrandom.workspace = true

# Math functions (gamma, erf, etc.)
libm.workspace = true

# Regex engine - guaranteed O(m*n) performance
regex.workspace = true
# Extended regex with backreferences/lookaround
fancy-regex.workspace = true
sha2.workspace = true

# Platform-specific time APIs
[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Globalization", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_Diagnostics_Debug", "Win32_System_Pipes", "Win32_System_Registry", "Win32_System_Time", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "speculation"
harness = false

[[bench]]
name = "string_ops"
harness = false

[[bench]]
name = "jit_speedup"
harness = false

[[bench]]
name = "gc_pauses"
harness = false

[[bench]]
name = "deopt_osr"
harness = false

