[package]
name = "prism_aot"
description = "Whole-program AOT build planning for Prism"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
prism_core.workspace = true
prism_code.workspace = true
prism_parser.workspace = true
prism_compiler.workspace = true
prism_stdlib.workspace = true
num-bigint.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
object.workspace = true
