[package]
name = "prism_cli"
description = "Command-line interface for Prism"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "prism"
path = "src/main.rs"

[[bin]]
name = "prismc"
path = "src/prismc.rs"

[[bin]]
name = "prism-test"
path = "src/prism_test.rs"

[dependencies]
prism_aot.workspace = true
prism_core.workspace = true
prism_compiler.workspace = true
prism_stdlib.workspace = true
prism_vm.workspace = true
serde.workspace = true
serde_json.workspace = true
