[package]
name = "prism_compiler"
description = "Bytecode compiler for Prism"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
prism_core.workspace = true
prism_code.workspace = true
prism_parser.workspace = true
num-bigint.workspace = true
smallvec.workspace = true
