[package]
name = "prism_core"
description = "Core types and traits for the Prism Python runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
rustc-hash.workspace = true
bumpalo.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
parking_lot.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "small_int_cache"
harness = false

