[package]
name = "prism_jit"
description = "JVM/V8-tier JIT compiler for Prism"
version.workspace = true
edition.workspace = true

[features]
default = []
arm64 = []  # Enable ARM64 backend compilation on non-ARM platforms


[dependencies]
prism_core.workspace = true
prism_code.workspace = true
prism_runtime.workspace = true
memmap2.workspace = true
bitflags.workspace = true
smallvec.workspace = true
parking_lot.workspace = true
rustc-hash.workspace = true
dashmap.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_Memory", "Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Kernel"] }

[target.'cfg(unix)'.dependencies]
libc.workspace = true
