[package]
name = "prism_runtime"
description = "High-performance Python runtime system (objects, types, GC)"
version.workspace = true
edition.workspace = true

[dependencies]
prism_core.workspace = true
prism_code.workspace = true
prism_gc.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
smallvec.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
bitflags.workspace = true
rustc-hash.workspace = true
memchr.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "shapes"
harness = false

