[package]
name = "prism_stdlib"
description = "Static metadata for Prism's native stdlib surface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]

[build-dependencies]
serde.workspace = true
toml.workspace = true
